add limit to round played

--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -35,8 +35,16 @@
         <LoserScreen Loser="@_host" RestartGame="@RestartGame" />
       }
     }
-    else if (_host is { HasTurn: false } && _guest is { HasTurn: false })
+    else if (_rounds > 11)
     {
+      if (_host is not null && _host.ConnectionId == _clientConnectionId)
+      {
+        <DrawScreen Player="@_host" RestartGame="@RestartGame" />
+      }
+      else
+      {
+        <DrawScreen Player="@_guest" RestartGame="@RestartGame" />
+      }
     }
     else
     {
@@ -90,6 +98,7 @@
   private bool _isJoiner;
   private string _joinerName = string.Empty;
 
+  private int _rounds;
   protected override async Task OnInitializedAsync()
   {
     string query = new Uri(Navigation.Uri).Segments[^1];
@@ -115,7 +124,7 @@
       _gameBoard = game.Board;
       _gameCanStart = game.CanStart;
       _host = game.Host;
-
+      _rounds = game.Rounds;
       if (game.Guest is not null)
       {
         _guest = game.Guest;
@@ -129,10 +138,7 @@
       {
         _activeMark = _guest.Mark;
       }
-      if (_host is { HasTurn: false } && _guest is { HasTurn: false })
-      {
-        await NextRound();
-      }
+
       await InvokeAsync(StateHasChanged);
     });
 
@@ -187,7 +193,7 @@
 
   private async Task NextRound()
   {
-    if (_hubConnection is not null)
+    if (_host is { HasTurn: false } && _guest is { HasTurn: false } && _hubConnection is not null)
     {
       await _hubConnection.SendAsync("NextRound", GameCode);
     }
